[tool.poetry]
name = "covid-test-finders"
version = "0.1.0"
description = ""
authors = ["Maria D'Angelo <dangelo.maria@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
datetime = "^4.3"
click = "^8.0.3"
pep8 = "^1.7.1"
flake8-colors = "^0.1.9"
isort = "^5.10.1"
pandas = "^1.3.5"
flatten_json = "^0.1.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
